lerning about more `dom` using console tab

--- a/06_DOM/one.html
+++ b/06_DOM/one.html
@@ -17,6 +17,12 @@
         <h2>Lorem ipsum dolor sit amet.</h2>
         <h2>Lorem ipsum dolor sit amet.</h2>
         <p>lorem ipsum is the lorem</p>
+
+        <ul>
+            <li>Lorem, ipsum dolor 1.</li>
+            <li>Lorem, ipsum dolor 2.</li>
+            <li>Lorem, ipsum dolor 3.</li>
+          </ul>
     </div>
 </body>
 </html>
