Learning about child and parent node

--- a/06_DOM/one.html
+++ b/06_DOM/one.html
@@ -19,9 +19,10 @@
         <p>lorem ipsum is the lorem</p>
 
         <ul>
-            <li>Lorem, ipsum dolor 1.</li>
-            <li>Lorem, ipsum dolor 2.</li>
-            <li>Lorem, ipsum dolor 3.</li>
+            <li class="list-item">One</li>
+            <li class="list-item">Two</li>
+            <li class="list-item">Three</li>
+            <li class="list-item">Four</li>
           </ul>
     </div>
 </body>
