updating and editing the `DOM` using function

--- a/06_DOM/four.html
+++ b/06_DOM/four.html
@@ -30,5 +30,23 @@
     }
 
     addOptiLanguage("golang")
+
+    // edit
+    const secondLang = document.querySelector("li:nth-child(2)")
+    // console.log(secondLang);
+    // secondLang.innerHTML = "mojo"
+    const newLi = document.createElement("li")
+    newLi.innerText = "mojo"
+
+    secondLang.replaceWith(newLi);
+
+    //edit
+    const firstLang = document.querySelector("li:first-child");
+    
+    const updatedli = document.createElement('li');
+    updatedli.appendChild(document.createElement)
+
+
+
 </script>
 </html>
