--- a/07_events/one.html
+++ b/07_events/one.html
@@ -33,8 +33,12 @@
         // onclick="alert('hello')"
         // jQuery = .on
         // attachEvent()
+        document.getElementById("images").addEventListener('click', function(e) {
+            console.log('Clicked inside the ul');
+        }, false)
+
         document.getElementById("owl").addEventListener('click', function(e) {
-            console.log(e)
+            console.log('owl clicked') // here it will run first even if it is inside the ul which has it's own click event
         }, false)
 
         
