learning about removing the element and

--- a/07_events/one.html
+++ b/07_events/one.html
@@ -49,7 +49,18 @@
 
         // }, false)
 
-        
+        document.querySelector('#images').addEventListener
+        ('click', function(e) {
+            console.log(e.target.tagName);
+            if(e.target.tagName === 'IMG') {
+                console.log(e.target.id);
+                let removeIt = e.target.parentNode
+                removeIt.remove() // removing the element using remove function()
+
+            }
+            // another method to remove the element
+            // removeIt.parentNode.removeChild(removeIt)
+        })
         
     </script>
 
